--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
-    "mongodb": "~2.0",
+    "mongodb": ">= 1.4",
     "monk": "~1.0.0"
   }
 }
