--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "document-microservice",
+  "name": "tags-microservice",
   "version": "0.0.1",
   "scripts": {
     "start": "node ./bin/www"
@@ -9,10 +9,15 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "highland": "^2.4.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
+    "neo4j": "^1.x",
     "serve-favicon": "~2.2.0",
-    "mongodb": ">= 1.4",
-    "monk": "~1.0.0"
+    "streamline": "^0.12.0"
+  },
+  "devDependencies": {
+    "debug": "~2.1.1",
+    "jasmine-node": "^1.14.5"
   }
 }
