--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "fibrous": "^0.3.3",
     "highland": "^2.4.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
