--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.5.1",
     "neo4j": "^1.x",
     "serve-favicon": "~2.2.0",
-    "streamline": "^0.12.0"
+    "streamline": "^0.12.0",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "debug": "~2.1.1",
