--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "tags-microservice",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "pretest": "jshint ./lib"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "debug": "~2.1.1",
     "jasmine-node": "^1.14.5",
-    "underscore": "^1.8.2"
+    "underscore": "^1.8.2",
+    "jshint": "2.6.x"
   }
 }
