--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
     // Enforcing
     "bitwise"       : true,     // true: Prohibit bitwise operators (&, |, ^, etc.)
     "camelcase"     : false,    // true: Identifiers must be in camelCase
-    "curly"         : true,     // true: Require {} for every new block or scope
+    "curly"         : false,     // true: Require {} for every new block or scope
     "eqeqeq"        : true,     // true: Require triple equals (===) for comparison
     "forin"         : true,     // true: Require filtering for..in loops with obj.hasOwnProperty()
     "immed"         : true,    // true: Require immediate invocations to be wrapped in parens e.g. `(function () { } ());`
@@ -33,7 +33,7 @@
     "maxlen"        : false,    // {int} Max number of characters per line
 
     // Relaxing
-    "asi"           : true,     // true: Tolerate Automatic Semicolon Insertion (no semicolons)
+    "asi"           : false,     // true: Tolerate Automatic Semicolon Insertion (no semicolons)
     "boss"          : false,     // true: Tolerate assignments where comparisons would be expected
     "debug"         : false,     // true: Allow debugger statements e.g. browser breakpoints.
     "eqnull"        : false,     // true: Tolerate use of `== null`
@@ -72,9 +72,17 @@
     "worker"        : false,    // Web Workers
     "wsh"           : false,    // Windows Scripting Host
     "yui"           : false,    // Yahoo User Interface
+    "mocha"         : true,
 
     // Custom Globals
     "globals"       : {         // additional predefined global variables
-
+        /* MOCHA */
+        /*"describe"   : false,
+        "it"         : false,
+        "before"     : false,
+        "beforeEach" : false,
+        "after"      : false,
+        "afterEach"  : false,*/
+        "expect"     : false
     }
 }
