--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fibrous": "^0.3.3",
     "highland": "^2.4.0",
     "jade": "~1.9.2",
+    "lodash": "^3.10.0",
     "morgan": "~1.5.1",
     "neo4j": "^1.x",
     "serve-favicon": "~2.2.0",
