--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "neo4j": "^1.x",
     "serve-favicon": "~2.2.0",
     "streamline": "^0.12.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "text-rank": "git://github.com/frankandrobot/text-rank.git#master"
   },
   "devDependencies": {
     "debug": "~2.1.1",
